src/tui/view/ui/snapshots/sbom_tools__tui__view__ui__render_snapshot_tests__view_licenses_conflicts_120x40.snap
---
source: src/tui/view/ui/render_snapshot_tests.rs
expression: text
---
sbom-tools  VIEW  │ SBOM │ CycloneDX  │ [SBOM]

[1] Overview  │ [2] Components  │ [3] Vulns  │ [4] Licenses  │ [5] Deps  │ [6] Quality  │ [7] Compliance  │ [8] Source

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Group:  License   │  [g] toggle  [Enter] inspect                  ┌ License Details ───────────────────────────────────┐
✓ 1  ⚠ 1  ? 0  │  2 total  │  ⚡  1 conflicts                      │Apache-2.0                                          │
                                                                  │                                                    │
┌ Licenses (2) ──────────────────────────────────────────────────┐│Category: Permissive                                │
│  License                         Count          Category       ││Risk: Low                                           │
│▶ Apache-2.0                         1 ████████  ✓ Permissive   ││Family: Apache                                      │
│  GPL-2.0-only                       1 ████████  © Copyleft     ││Components: 1                                       │
│                                                                ││                                                    │
│                                                                ││Characteristics:                                    │
│                                                                ││✓ Commercial use allowed                            │
│                                                                ││✓ Modification allowed                              │
│                                                                ││✓ Distribution allowed                              │
│                                                                ││✓ Patent grant                                      │
│                                                                ││✗ Copyleft/Share-alike                              │
│                                                                ││                                                    │
│                                                                ││Compatibility:                                      │
│                                                                ││⚠ vs GPL-2.0-only: Apache-2.0 has patent clauses    │
│                                                                ││incompatible with GPL-2.0                           │
│                                                                ││                                                    │
│                                                                ││Components: 1                                       │
│                                                                ││[Enter] jump to component  [K/J] scroll             │
│                                                                ││L apache-lib@1.0                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘
 Components: 2 │ Vulns: 0 │ Licenses: 2
         g group  Enter inspect  K/J scroll │  Tab switch  / search  e export  ? help  q quit [y] copy Apache-2.0
