src/tui/view/ui/snapshots/sbom_tools__tui__view__ui__render_snapshot_tests__view_overview_120x40.snap
---
source: src/tui/view/ui/render_snapshot_tests.rs
expression: text
---
sbom-tools  VIEW  │ acme-webapp │ CycloneDX 1.5 │ [SBOM]

[1] Overview  │ [2] Components  │ [3] Dependencies  │ [4] Licenses  │ [5] Vulnerabilities  │ [6] Quality  »

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Components ────────┐┌ Vulnerabilities ───┐┌ Licenses ──────────┐┌ Document Info ─────────────────────────────────────┐
│                    ││                    ││                    ││Name:    acme-webapp                                │
│          9         ││          2         ││          2         ││Format:   CycloneDX 1.5                             │
│     Components     ││   Vulnerabilities  ││   Unique Licenses  ││Created: 2024-06-15 10:00:00 (AGE)│
│                    ││                    ││                    ││                                                    │
│    2 ecosystems    ││     1C 1H 0M 0L    ││      1 unknown     ││[e] Export (JSON, SARIF, Markdown, HTML, CSV)       │
│                    ││                    ││                    │└────────────────────────────────────────────────────┘
└────────────────────┘└────────────────────┘└────────────────────┘┌ Top Vulnerable Components (2) ─────────────────────┐
┌ Vulnerability Severity ────────────────────────────────────────┐│Component                              CVEs Max Sev │
│  Critical ██████████░░░░░░░░░░    1 (50%)                      ││express                                1    High    │
│      High ██████████░░░░░░░░░░    1 (50%)                      ││axios                                  1    Critical│
│    Medium ░░░░░░░░░░░░░░░░░░░░    0 ( 0%)                      ││                                                    │
│       Low ░░░░░░░░░░░░░░░░░░░░    0 ( 0%)                      ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
└────────────────────────────────────────────────────────────────┘│                                                    │
┌ Ecosystem Distribution ────────────────────────────────────────┐│                                                    │
│         npm ██████████████████████░░░    8 (88%)               ││                                                    │
│     Unknown ██░░░░░░░░░░░░░░░░░░░░░░░    1 (11%)               ││                                                    │
└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘
┌ License Distribution ──────────────────────────────────────────┐┌ Top Depended-On Components (2) ────────────────────┐
│         MIT ████████████████░░░░░░░░░    6 (66%)               ││Component                              Deps   Vulns │
│  Apache-2.0 █████░░░░░░░░░░░░░░░░░░░░    2 (22%)               ││lodash                                 1      0     │
│ unlicensed: 1 component                                        ││typescript                             1      0     │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘
 Components: 9 │ Vulns: 2 (1C/1H) │ Licenses: 2
                            P cycle profile │  Tab switch  / search  e export  ? help  q quit
