src/tui/view/ui/snapshots/sbom_tools__tui__view__ui__render_snapshot_tests__view_quality_120x40.snap
---
source: src/tui/view/ui/render_snapshot_tests.rs
expression: text
---
sbom-tools  VIEW  │ acme-webapp │ CycloneDX 1.5 │ [SBOM]

[1] Overview  │ [2] Components  │ [3] Vulns  │ [4] Licenses  │ [5] Deps  │ [6] Quality  │ [7] Compliance  │ [8] Source

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ SBOM Quality Score ──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ F Failing ██████████░░░░░░░░░░ 48/100  Profile: Standard  Engine v2.1                                                │
│ Best: Identifiers (89%)  Focus: Dependencies (0%)                                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Insights ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ 9 components  npm  │  Age: [N]d  │  Complexity: Low                                                                  │
│ ⚠ 1 no-ID  9 orphans  │  Hashes: 0% strong                                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Category Scores (passing: 70) ─────────────────────────────────┐┌ SBOM Checklist ────────────────────────────────────┐
│       ██████ ▄▄▄▄▄▄                                            ││  ✗ Creator info  ✗ Serial number                   │
│       ██████ ██████                                            ││  ✓ Timestamp                                       │
│       ██████ ██████                                            ││                                                    │
│▇▇▇▇▇▇ ██████ ██████                                            ││  Versions  100%  ██████████████████████████████    │
│██████ ██████ ██████                                            ││  PURLs      89%  ███████████████████████████░░░    │
│██████ ██████ ██████                                            ││  Licenses   89%  ███████████████████████████░░░    │
│██50██ ██88██ ██83██  N/A     0      0    ▆▆10▆▆  N/A           ││  Suppliers   0%  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░    │
│ Cmpl   IDs    Lic    VDoc   Deps   Hash   Prov   Life          ││  Hashes      0%  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░    │
└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘
┌ Top Recommendations (7) [↑↓ select, Enter→detail] ───────────────────────────────────────────────────────────────────┐
│> [P1] [Compliance] Fix 1 compliance error(s) to meet Standard requirements                                           │
│       1 affected  |  +20.0pts                                                                                        │
│  [P2] [Provenance] Add SBOM creation tool information                                                                │
│       0 affected  |  +8.0pts                                                                                         │
│  [P2] [Identifiers] Add PURL or CPE identifiers to components                                                        │
│       1 affected  |  +2.2pts                                                                                         │
│  [P3] [Provenance] Add VCS (source repository) URLs to components                                                    │
│       9 affected  |  +5.0pts                                                                                         │
│  [P4] [Dependencies] Add dependency relationships between components                                                 │
│       9 affected  |  +10.0pts                                                                                        │
│  [P4] [Dependencies] Review orphan components that have no dependency relationships                                  │
│       9 affected  |  +5.0pts                                                                                         │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Components: 9 │ Vulns: 0 │ Licenses: 3
             v view │  Tab switch  / search  e export  ? help  q quit [y] copy Fix 1 compliance error(s) t...
