src/tui/view/ui/snapshots/sbom_tools__tui__view__ui__render_snapshot_tests__view_source_80x24.snap
---
source: src/tui/view/ui/render_snapshot_tests.rs
expression: text
---
sbom-tools  VIEW  │ acme-webapp │ CycloneDX 1.5 │ [SBOM]

« [5] Vulnerabilities  │ [6] Quality  │ [7] Compliance  │ [8] Source

────────────────────────────────────────────────────────────────────────────────
┌ SBOM Source [Tree] (126 nodes) 'v':Raw ──────────────┐┌ SBOM Map ────────────┐
│root                                                  ││ CycloneDX 1.5 │ 2024…│
│> ▼ root: {} (7 keys)                                 ││──────────────────────│
│  ├─ bomFormat: "CycloneDX"                           ││ ▸ components      [8]│
│  ├─ ▶ components: [] (8 items)                       ││ ▸ dependencies    [5]│
│  ├─ ▶ dependencies: [] (5 items)                     ││ ▸ metadata        {2}│
│  ├─ ▶ metadata: 2024-06-15T10:00:00Z                 ││ ▸ vulnerabilities [2]│
│  ├─ specVersion: "1.5"                               ││──────────────────────│
│  ├─ version: 2                                       ││ root                 │
│  └─ ▶ vulnerabilities: [] (2 items)                  ││ 9 components         │
│                                                      ││ 2 vulnerabilities    │
│                                                      ││ 2 licenses           │
│                                                      ││ 2 dependency edges   │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││ ▓░░░░░░░░░   1/8  12%│
└──────────────────────────────────────── Ln 1/8 (12%) ┘└──────────────────────┘
 Components: 9 │ Vulns: 2 (1C/1H) │ Licenses: 2
  …  v tree/raw │  Tab switch  / search  e export  ? help  q quit [y] copy root
