src/tui/view/ui/snapshots/sbom_tools__tui__view__ui__render_snapshot_tests__view_tree_80x24.snap
---
source: src/tui/view/ui/render_snapshot_tests.rs
expression: text
---
sbom-tools  VIEW  │ acme-webapp │ CycloneDX 1.5 │ [SBOM]

« [2] Components  │ [3] Dependencies  │ [4] Licenses  │ [5] Vulnerabilities  »

────────────────────────────────────────────────────────────────────────────────
Group:  Ecosystem   Filter:  All   │   …    ┌ npm ─────────────────────────────┐
                                            │npm                               │
┌ Components (9) ──────────────────────────┐│Components: 8                     │
│▶ ▼ npm (8) ! 2                           ││                                  │
│  │  ├─ · axios@1.4.0 [npm] C 1           ││Vulnerabilities: 2                │
│  │  ├─ · dayjs@1.11.7 [npm]              ││Critical        1 ██              │
│  │  ├─ · express@4.18.2 [npm] H 1        ││High            1 ██              │
│  │  ├─ · lodash@4.17.21 [npm]            ││Clean           6 ████████████    │
│  │  ├─ · prisma@4.15.0 [npm]             ││                                  │
│  │  ├─ · react@18.2.0 [npm]              ││Most Vulnerable:                  │
│  │  ├─ · typescript@5.0.4 [npm]          ││axios (1)                         │
│  │  └─ · zod@3.21.4 [npm]                ││express (1)                       │
│  ▼ Unknown (1)                           ││                                  │
│     └─ · acme-webapp@2.0.0               ││                                  │
│                                          ││                                  │
│                                          ││                                  │
└──────────────────────────────────────────┘└──────────────────────────────────┘
 Components: 9 │ Vulns: 2 (1C/1H) │ Licenses: 2 │ Group:  Ecosystem  Filter:  Al
    …  p panel │  Tab switch  / filter  e export  ? help  q quit [y] copy npm
