src/tui/view/ui/snapshots/sbom_tools__tui__view__ui__render_snapshot_tests__view_tree_component_detail_80x24.snap
---
source: src/tui/view/ui/render_snapshot_tests.rs
expression: text
---
sbom-tools  VIEW  │ acme-webapp │ CycloneDX 1.5 │ [SBOM]

« [2] Components  │ [3] Dependencies  │ [4] Licenses  │ [5] Vulnerabilities  »

────────────────────────────────────────────────────────────────────────────────
Group:  Ecosystem   Filter:  All   │   …    ◀ [1] Overview  │ [2] Identifiers  │

┌ Components (9) ──────────────────────────┐┌ Overview ────────────────────────┐
│  ▼ npm (8) ! 2                           ││axios                            ▲│
│▶ │  ├─ · axios@1.4.0 [npm] C 1           ││1 vulns                          █│
│  │  ├─ · dayjs@1.11.7 [npm]              ││Version:   1.4.0                 █│
│  │  ├─ · express@4.18.2 [npm] H 1        ││Ecosystem: npm                   █│
│  │  ├─ · lodash@4.17.21 [npm]            ││Type:      library               █│
│  │  ├─ · prisma@4.15.0 [npm]             ││                                 █│
│  │  ├─ · react@18.2.0 [npm]              ││Vulns:     1 (see [3] tab)       █│
│  │  ├─ · typescript@5.0.4 [npm]          ││                                 ║│
│  │  └─ · zod@3.21.4 [npm]                ││PURL:      pkg:npm/axios@1.4.0   ║│
│  ▼ Unknown (1)                           ││                                 ║│
│     └─ · acme-webapp@2.0.0               ││Licenses:                        ║│
│                                          ││• MIT                            ║│
│                                          ││                                 ▼│
└──────────────────────────────────────────┘└──────────────────────────────────┘
 Components: 9 │ Vulns: 2 (1C/1H) │ Licenses: 2 │ Group:  Ecosystem  Filter:  Al
 …  Tab switch  / filter  e export  ? help  q quit [y] copy pkg:npm/axios@1.4.0
